--- a/index.html
+++ b/index.html
@@ -31,9 +31,22 @@
             </div>
         </header>
         <main class="main">
-            <section class="about">
-                
+            <section class="hello">
+                <div class="container">
+                    <div class="hello__content">
+                        <div class="hello__description">
+                            <span>ООО«НмзСпецстрой»</span>
+                            <h1>Надёжный поставщик оборудования для наземных и подземных условий</h1>
+                        </div>
+                        <div class="hello__counselling">
+                            <h2>Получить<br>консультацию</h2>
+                            <p>Оставьте свою заявку, чтобы мы<br>могли расчитать стоимость<br>оборудования</p>
+                            <button><img src="./img/icons/arrow.svg" alt="arrow"></button>
+                        </div>
+                    </div>
+                </div>
             </section>
+            <section class="about"></section>
             <section class="equipment"></section>
             <section class="about"></section>
             <section class="services"></section>
