add adaptive menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>НМЗ СПЕЦСТРОЙ</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- <link rel="stylesheet" href="./fonts/HelveticaNeue/font.css"> -->
 </head>
 <body class="body">
     <div class="wrapper">
@@ -53,6 +52,11 @@
                                 </li>
                             </ul>
                         </nav>
+                    </div>
+                    <div class="header__menu-mobile">
+                        <button class="header__menu-button">
+                            <img src="./img/icons/menu.svg" alt="menu" class="header__menu-img">
+                        </button>
                     </div>
                 </div>
             </div>
