add adaptive welcome section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,8 +47,8 @@
                                 <li class="menu__item">
                                     <a class="menu__link" href="#">Вакансии</a>
                                 </li>
-                                <li class="menu__item">
-                                    <a class="menu__link" href="#">Связаться</a>
+                                <li class="menu__item menu__item-active">
+                                    <a class="menu__link menu__link-active" href="#">Связаться</a>
                                 </li>
                             </ul>
                         </nav>
@@ -63,6 +63,18 @@
         </header>
         <main class="main">
             <section class="welcome">
+                <div class="container">
+                    <div class="welcome__content">
+                        <div class="welcome__cta">
+                            <p class="welcome__company-name">ООО«НмзСпецстрой»</p>
+                            <h1 class="welcome__description">Надёжный поставщик оборудования для наземных и подземных условий</h1>
+                            <button class="welcome__button">
+                                <span class="welcome__button-name">Отправить заявку</span>
+                                <img src="./img/icons/double_arrow.svg" alt="double_arrow" class="welcome__button-img">
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section class="about"></section>
             <section class="equipment"></section>
