--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                         <button class="header__menu-button">
                             <img src="./img/icons/menu.svg" alt="menu" class="header__menu-img">
                         </button>
+                        <nav class="menu-mobile">
+                            <ul class="menu-mobile">
+                                
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
