--- a/index.html
+++ b/index.html
@@ -58,8 +58,39 @@
                             <img src="./img/icons/menu.svg" alt="menu" class="header__menu-img">
                         </button>
                         <nav class="menu-mobile">
-                            <ul class="menu-mobile">
-                                
+                            <ul class="menu-mobile__list">
+                                <li class="menu-moblie__item">
+                                    <a href="" class="menu-mobile__link">Оборудование</a>
+                                    <nav class="sub-menu-mobile">
+                                        <ul class="sub-menu-mobile__list">
+                                            <li class="sub-menu-mobile__item">
+                                                <a href="" class="sub-menu-mobile__link">Конвейры</a>
+                                                <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                            </li>
+                                            <li class="sub-menu-mobile__item">
+                                                <a href="" class="sub-menu-mobile__link">Эливаторы</a>
+                                                <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                            </li>
+                                            <li class="sub-menu-mobile__item">
+                                                <a href="" class="sub-menu-mobile__link">Лифтовое оборудование</a>
+                                                <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                            </li>
+                                            <li class="sub-menu-mobile__item">
+                                                <a href="" class="sub-menu-mobile__link">Запорная арматура</a>
+                                                <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="menu-moblie__item">
+                                    <a href="" class="menu-mobile__link">Конвейеры</a>
+                                </li>
+                                <li class="menu-moblie__item">
+                                    <a href="" class="menu-mobile__link">Лифтовое оборудование</a>
+                                </li>
+                                <li class="menu-moblie__item">
+                                    <a href="" class="menu-mobile__link">Запорная арматура</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
