--- a/index.html
+++ b/index.html
@@ -126,7 +126,27 @@
                     </div>
                 </div>
             </section>
-            <section class="about"></section>
+            <section class="about">
+                <div class="container">
+                    <div class="about__content info">
+                        <div class="info__header">
+                            <h2 class="info__title">[О Компании]</h2>
+                            <article class="info__description description">
+                                <h3 class="description__title">Компания является одним из ведущих поставщиков подземного и наземного оборудования на рынке</h3>
+                                <div class="description__body">
+                                    <div class="description__content">
+                                        <p class="description__text">Мы предлагаем широкий ассортимент оборудования и комплектующих. Осуществляем маркетинговую и коммерческую деятельность для обеспечения эффективного взаимодействия между производителями и потребителями.</p>
+                                    </div>
+                                    <div class="description__content">
+                                        <p class="description__text">Наша компания специализируемся на реализации продукции, производимой машиностроительными предприятиями партнерам, маркетинговой и коммерческой деятельностью.</p>
+                                        <p class="description__text">Мы работаем в тесном сотрудничестве с ведущими компаниями на рынке. Наши партнеры уверены в нашей надежности.</p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="equipment"></section>
             <section class="about"></section>
             <section class="services"></section>
