add cards in about sections

--- a/index.html
+++ b/index.html
@@ -144,6 +144,59 @@
                                 </div>
                             </article>
                         </div>
+                        <div class="info__body">
+                            <div class="info__cards">
+                                <div class="info__card card">
+                                    <article class="card__item">
+                                        <img src="./img/imgs/arrows.png" alt="Карта России" class="card__img-first">
+                                        <div class="card__count">
+                                            <h4 class="card__number">[01]</h4>
+                                        </div>
+                                        <div class="card__content"></div>
+                                        <div class="card__info">
+                                            <span class="card__statistics">>12</span>
+                                            <span class="card__description">Лет на рынке</span>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="info__card card">
+                                    <article class="card__item">
+                                        <img src="./img/imgs/map.png" alt="Карта России" class="card__img-second">
+                                        <div class="card__count">
+                                            <h4 class="card__number">[02]</h4>
+                                        </div>
+                                        <div class="card__content circle">
+                                            <span class="circle-1"></span>
+                                            <span class="circle-2"></span>
+                                            <span class="circle-3"></span>
+                                            <span class="circle-4"></span>
+                                            <span class="circle-5"></span>
+                                            <span class="circle-6"></span>
+                                            <span class="circle-7"></span>
+                                            <span class="circle-8"></span>
+                                            <span class="circle-9"></span>
+                                        </div>
+                                        <div class="card__info">
+                                            <span class="card__statistics">5+</span>
+                                            <span class="card__description">Городов</span>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="info__card card">
+                                    <article class="card__item">
+                                        <img src="./img/imgs/house.png" alt="Карта России" class="card__img-thrid">
+                                        <div class="card__count">
+                                            <h4 class="card__number">[03]</h4>
+                                        </div>
+                                        <div class="card__content"></div>
+                                        <div class="card__info">
+                                            <span class="card__statistics">175+</span>
+                                            <span class="card__description">Успешных сделок</span>
+                                        </div>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
