add circle animation

--- a/index.html
+++ b/index.html
@@ -166,15 +166,26 @@
                                             <h4 class="card__number">[02]</h4>
                                         </div>
                                         <div class="card__content circle">
-                                            <span class="circle-1"></span>
-                                            <span class="circle-2"></span>
-                                            <span class="circle-3"></span>
-                                            <span class="circle-4"></span>
-                                            <span class="circle-5"></span>
-                                            <span class="circle-6"></span>
-                                            <span class="circle-7"></span>
-                                            <span class="circle-8"></span>
-                                            <span class="circle-9"></span>
+                                            <div class="circle__body-first">
+                                                <span class="body-first__static"></span>
+                                                <span class="body-first__dynamic"></span>
+                                            </div>
+                                            <div class="circle__body-second">
+                                                <span class="body-second__static"></span>
+                                                <span class="body-second__dynamic"></span>
+                                            </div>
+                                            <div class="circle__body-third">
+                                                <span class="body-third__static"></span>
+                                                <span class="body-third__dynamic"></span>
+                                            </div>
+                                            <div class="circle__body-fourth">
+                                                <span class="body-fourth__static"></span>
+                                                <span class="body-fourth__dynamic"></span>
+                                            </div>
+                                            <div class="circle__body-fifth">
+                                                <span class="body-fifth__static"></span>
+                                                <span class="body-fifth__dynamic"></span>
+                                            </div>
                                         </div>
                                         <div class="card__info">
                                             <span class="card__statistics">5+</span>
